<resources>
    <string name="app_name">SmplJavaNFC</string>
    <!-- Setting Strings   -->
    <string name="action_settings">Settings</string>
    <string name="action_exit"> Exit </string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">NFC Tools</string>
    <string name="second_fragment_label">Second Fragment</string>

    <!-- Button Strings -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="nfc_read"> Read NFC Tag </string>
    <string name="nfc_write"> Write to NFC Tag</string>

    <!-- Screen Strings -->
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="sign_in">Sign in</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splash_screen_fragment_label">Splash Screen</string>
</resources>