<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".FirstFragment">

    <TextView
        android:id="@+id/textview_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_first_fragment"
    />

    <LinearLayout
        android:id="@+id/button_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        >

        <Button
            android:id="@+id/button_nfc_read"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nfc_read"
            android:onClick="handleNFCRead"
            />

        <Button
            android:id="@+id/button_nfc_write"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nfc_write"
            android:onClick="handleNFCWrite"
        />

        <Button
            android:id="@+id/button_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next"
        />
    </LinearLayout>
</LinearLayout>